--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,8 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  display: flex;
+  justify-content: center;
 }
 
 .row {
