--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color: #d9d4d9;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
